--- a/HW/HW10/hw10.md
+++ b/HW/HW10/hw10.md
@@ -1,1 +1,37 @@
+# HW 10
 
+## Problem
+Given the `root` of a binary tree, return the level order traversal of its nodes' values. (i.e., from left to right, level by level).
+
+### Constraints:
+
+- The number of nodes in the tree is in the range `[0, 2000]`.
+- `-1000 <= TreeNode value <= 1000`
+
+## High-Level Approaches
+
+### Python Approach
+
+1. Initialize `result` as an empty list to store the level order traversal, and `queue` as a deque containing the root node initially.
+2. Start a while loop to traverse the tree level by level. At each iteration, process nodes at the current level.
+3. Within the loop, determine the size of the current level by finding the length of the queue. Then, iterate over each node in the current level.
+4. For each node, check if its value falls within the given range [-1000, 1000]. If it doesn't, raise a ValueError.
+5. Append the value of the current node to the list `level_nodes`.
+6. If the current node has left or right children, append them to the queue for further processing in the next level. Increment `nodeCount` for each added node.
+7. After processing all nodes in the current level, append the list `level_nodes` containing the values of nodes in that level to the `result`.
+8. After each level is processed, check if the total number of nodes processed (`nodeCount`) exceeds the limit of 2000. If it does, raise a ValueError.
+9. Finally, return the `result` containing the level order traversal.
+
+### Java Approach
+
+1. Initialize `result` as an empty list to store the level order traversal. If the root is null, return null immediately.
+2. Create a queue (implemented as LinkedList in Java) and enqueue the root node.
+3. Start a while loop until the queue is empty. Within the loop, process nodes at each level.
+4. At each iteration, find the size of the current level by getting the size of the queue.
+5. Iterate over each node in the current level.
+6. For each node, check if its value falls within the range [-1000, 1000]. If it doesn't, throw an IllegalArgumentException.
+7. Add the value of the current node to the list `levelNodes`.
+8. If the current node has left or right children, enqueue them for further processing in the next level. Increment `nodeCount` for each added node.
+9. After processing all nodes in the current level, add the list `levelNodes` containing the values of nodes in that level to the `result`.
+10. After each level is processed, check if the total number of nodes processed (`nodeCount`) exceeds the limit of 2000. If it does, throw an IllegalArgumentException.
+11. Finally, return the `result` containing the level order traversal.
