--- a/HW/HW11/hw11.md
+++ b/HW/HW11/hw11.md
@@ -1,1 +1,37 @@
+# HW 10
 
+## Problem
+An image is represented by an `m x n` integer grid `image` where `image[i][j]` represents the pixel value of the image.
+
+You are also given three integers `sr`, `sc`, and `color`. You should perform a **flood fill** on the image starting from the pixel `image[sr][sc]`.
+
+To perform a **flood fill**, consider the starting pixel, plus any pixels connected **4-directionally** to the starting pixel of the same color as the starting pixel, plus any pixels connected **4-directionally** to those pixels (also with the same color), and so on. Replace the color of all of the aforementioned pixels with `color`.
+
+### Constraints:
+
+- `m == image.length`
+- `n == image[i].length`
+- `1 <= m, n <= 50`
+- `0 <= image[i][j], color < 2^16`
+- `0 <= sr < m`
+- `0 <= sc < n`
+
+## High-Level Approaches
+
+### Python Approach
+
+1. Start by initializing variables `old_color` to store the color of the starting pixel, and `stack` to maintain pixels to be processed. If the starting pixel's color is already the desired color, return the image as there's no need for flood fill.
+2. Begin a loop to perform flood fill. While there are pixels in the stack, pop the last pixel coordinates `(row, col)`.
+3. Set the color of the current pixel `(row, col)` to the desired color.
+4. Iterate through the neighboring pixels in 4 directions: up, down, left, and right. Calculate the new coordinates `(new_row, new_col)` based on the current pixel and direction.
+5. Verify if the new coordinates are within the image boundaries and if the neighboring pixel has the same color as the starting pixel. If both conditions are met, add the new coordinates to the stack for further processing.
+6. After completing flood fill, return the modified image.
+
+### Java Approach
+
+1. Begin by initializing variables `oldColor` to store the color of the starting pixel, and `stack` to maintain pixels to be processed. If the starting pixel's color is already the desired color, return the image as there's no need for flood fill.
+2. Start a loop to perform flood fill. While there are pixels in the stack, pop the last pixel coordinates `(row, col)`.
+3. Set the color of the current pixel `(row, col)` to the desired color.
+4. Iterate through the neighboring pixels in 4 directions: up, down, left, and right. Calculate the new coordinates `(newRow, newCol)` based on the current pixel and direction.
+5. Verify if the new coordinates are within the image boundaries and if the neighboring pixel has the same color as the starting pixel. If both conditions are met, add the new coordinates to the stack for further processing.
+6. After completing flood fill, return the modified image.
