--- a/HW/HW12/hw12.md
+++ b/HW/HW12/hw12.md
@@ -1,1 +1,49 @@
+# HW 12
 
+## Problem
+There are `n` houses in a village. We want to supply water for all the houses by building wells and laying pipes.
+
+For each house `i`, we can either build a well inside it directly with cost `wells[i - 1]` (note the `-1` due to **0-indexing**), or pipe in water from another well to it. The costs to lay pipes between houses are given by the array `pipes` where each `pipes[j] = [house1_j, house2_j, cost_j]` represents the cost to connect house1_j and house2_j together using a pipe. Connections are bidirectional, and there could be multiple valid connections between the same two houses with different costs.
+
+### Constraints:
+
+- `2 <= n <= 10^4`
+- `wells.length == n`
+- `0 <= wells[i] <= 10^5`
+- `1 <= pipes.length <= 10^4`
+- `pipes[j].length == 3`
+- `1 <= house1_j, house2_j <= n`
+- `0 <= cost_j <= 10^5`
+- `house1_j != house2_j`
+
+## High-Level Approaches
+
+### Python Approach
+
+1. Create an empty list `edges` to store the edges, where each edge is represented as a tuple `(cost, house1, house2)`.
+2. For each well, create an edge with cost `wells[i]`, and connect it to the source node `0` and the house `i + 1`.
+3. Append this edge to the `edges` list.
+4. For each pipe, create an edge with cost `pipe[2]`, and connect it between `pipe[0]` and `pipe[1]`.
+5. Append this edge to the `edges` list.
+6. Sort the `edges` list based on the cost of each edge.
+7. Create a parent list `parent` and a rank list `rank`, both of size `n + 1`.
+8. Initialize `parent[i]` as `i` and `rank[i]` as `0` for all `i`.
+9. Iterate through each edge in the sorted `edges`.
+10. For each edge, find the root of each house using the `find` function.
+11. If the roots are different, perform the union of the two sets using the `union` function and add the cost of the edge to `totalCost`.
+12. After processing all the edges, return the `totalCost`.
+
+### Java Approach
+
+1. Create an empty `ArrayList` named `edges` to store the edges, where each edge is represented as an integer array of size `3` with values `[cost, house1, house2]`.
+2. Iterate through the `wells` array and add an edge with cost `wells[i]`, connecting it to the source node `0` and the house `i + 1`.
+3. Add this edge to the `edges` list.
+4. Iterate through the `pipes` array, and for each pipe, add an edge with cost `pipe[2]`, connecting it between `pipe[0]` and `pipe[1]`.
+5. Add this edge to the `edges` list.
+6. Sort the `edges` list using a lambda function to compare the costs of each edge.
+7. Create an integer array `parent` and an integer array `rank`, both of size `n + 1`.
+8. Initialize `parent[i]` as `i` and `rank[i]` as `0` for all `i`.
+9. Iterate through each edge in the sorted `edges`.
+10. For each edge, find the root of each house using the `find` method.
+11. If the roots are different, perform the union of the two sets using the `union` method and add the cost of the edge to `totalCost`.
+12. After processing all the edges, return the `totalCost`.
